--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     </head>
     <body>
         <form method="POST" action="/create/">
-            <input type="text" name="name">
+            <input type="text" name="name" placeholder="Seu Nome">
             <input type="submit">
         </form>
         <table>
