--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
     <body>
         <h1> Teste Sea Tecnologia - Dayse Silva  </h1>
         <form method="POST" action="/create/">
-            <input type="text" name="name" placeholder="Digite aqui">
+            <input type="text" name="name" placeholder="Digite aqui o texto">
             <input type="submit">
         </form>
         <table>
             <tr>
                 <td>
-                    Nome
+                    Texto
                 </td>
                 <td>
                     Apagar
