--- a/templates/update.html
+++ b/templates/update.html
@@ -5,7 +5,7 @@
     <body>
         <h1> Teste Sea Tecnologia - Dayse Silva  </h1>
         <form method="POST" action=".">
-            <input type="text" name="name" value="{{ language.name }}">
+            <input type="text" name="name" value="{{ text.name }}">
             <input type="submit">
         </form>
     </body>
